--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">appdocsach</string>
-    <string name="test_lorem_length">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</string>
+    <string name="test_lorem_long">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</string>
     <string name="test_lorem_short">AAAAAAAAAAAAAAAAA</string>
     <string name="main_app_title" translatable="true">App đọc sách</string>
     <string name="login_username_title">Tài khoản</string>
@@ -8,5 +8,9 @@
     <string name="unexpected_error_message">Lỗi không xác định</string>
     <string name="main_item_book_cover_description">Ảnh truyện</string>
     <string name="main_item_book_release_date_key">Cập nhật lúc :</string>
-    <string name="main_item_book_author_key">Tác giả :</string>
+    <string name="author_key">Tác giả :</string>
+
+    <string name="book_detail_book_description_key">Mô tả</string>
+    <string name="book_detail_chapter_list_key">Danh sách chương truyện</string>
+
 </resources>
