--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Truyện hay</string>
+    <string name="pref_app_name">appdocsach</string>
     <string name="test_lorem_long">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</string>
     <string name="test_lorem_short">AAAAAAAAAAAAAAAAA</string>
     <string name="main_app_title" translatable="true">App đọc sách</string>
@@ -19,4 +20,7 @@
 
     <string name="is_edited">Đã chỉnh sửa ✔</string>
     <string name="comment_content_see_more">… Xem thêm</string>
+    <string name="comment_in">Nhập bình luận</string>
+    <string name="comment_scroll_view">Bình luận</string>
+    <string name="comment_user_avatar">Ảnh đại diện</string>
 </resources>
