--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,5 +70,7 @@
     <string name="error_logout">Lỗi khi đăng xuất</string>
     <string name="wrong_current_pass">Sai mật khẩu cũ</string>
     <string name="view_count">Lượt xem</string>
+    <string name="nothing_searched">Không có lịch sử nào ở đây</string>
+    <string name="btn_delete_all_search_history">Xóa hết tất cả lịch sử</string>
 
 </resources>
